examples/planar_2link/core/include/tlm_core.h

/* ----- Robot configuration ------------------------------------------- */
typedef struct TlmRobotConfig {
    double l1;            /* link 1 length [m] */
    double l2;            /* link 2 length [m] */
    double theta1_min;    /* [rad] */
    double theta1_max;    /* [rad] */
    double theta2_min;    /* [rad] */
    double theta2_max;    /* [rad] */
    double base_x;        /* base position [m] */
    double base_y;        /* base position [m] */
} TlmRobotConfig;
TLM_CORE_API void tlm_core_default_config(TlmRobotConfig*);
/* ----- Forward kinematics ------------------------------------------- */
typedef struct TlmPose {
    double base_x,   base_y;
    double joint2_x, joint2_y;
    double end_x,    end_y;
} TlmPose;
/* Compute the pose of the arm for the given joint angles. Always
 * succeeds for finite inputs. Returns 0 on bad input. */
TLM_CORE_API int32_t tlm_core_forward_kinematics(const TlmRobotConfig*,
                                                 double theta1, double theta2,
                                                 TlmPose* out);
/* ----- Workspace boundary -------------------------------------------- */
/*
 * The boundary consists of 4 polylines per "side":
 *
 *   curve_a: θ2 = t2_lo, θ1 sweeps from t1_min to t1_max
 *   curve_b: θ2 = t2_hi, θ1 sweeps from t1_min to t1_max
 *   curve_c: θ1 = t1_min, θ2 sweeps from t2_lo to t2_hi
 *   curve_d: θ1 = t1_max, θ2 sweeps from t2_lo to t2_hi
 *
 * The Python script calls this once with (θ2_min, 0) — the "-θ2"
 * (red) boundary — and once with (0, θ2_max) — the "+θ2" (green)
 * boundary.
 *
 * Each side returns 4·samples_per_curve points. With samples_per_curve
 * = 100 (the Python default) that's 400 points per side.
 */
typedef struct TlmWorkspace TlmWorkspace;
TLM_CORE_API TlmWorkspace* tlm_core_compute_workspace(
    const TlmRobotConfig*,
    double t2_lo, double t2_hi,
    int32_t samples_per_curve);    /* >= 2 */
TLM_CORE_API void tlm_core_free_workspace(TlmWorkspace*);
/* Number of samples per curve (same value passed in). */
TLM_CORE_API int32_t tlm_core_ws_samples_per_curve(const TlmWorkspace*);
/* Each "copy" call fills buffer_len doubles for the named curve. The
 * buffer must hold samples_per_curve elements. Returns 0 on bad input,
 * else samples_per_curve. */
TLM_CORE_API int32_t tlm_core_ws_copy_a_x(const TlmWorkspace*, double*, int32_t);
TLM_CORE_API int32_t tlm_core_ws_copy_a_y(const TlmWorkspace*, double*, int32_t);
TLM_CORE_API int32_t tlm_core_ws_copy_b_x(const TlmWorkspace*, double*, int32_t);
TLM_CORE_API int32_t tlm_core_ws_copy_b_y(const TlmWorkspace*, double*, int32_t);
TLM_CORE_API int32_t tlm_core_ws_copy_c_x(const TlmWorkspace*, double*, int32_t);
TLM_CORE_API int32_t tlm_core_ws_copy_c_y(const TlmWorkspace*, double*, int32_t);
TLM_CORE_API int32_t tlm_core_ws_copy_d_x(const TlmWorkspace*, double*, int32_t);
TLM_CORE_API int32_t tlm_core_ws_copy_d_y(const TlmWorkspace*, double*, int32_t);
/* ----- Misc ---------------------------------------------------------- */
TLM_CORE_API const char* tlm_core_version(void);